--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </section>
             </div>
             <div class="col text-center mt-4">
-                <img class="phone-app-image" src="phone-app-top.png" alt="image of app on phone">
+                <img class="phone-app-image" src="phone-app-top.png" alt="image of app on phone"><br>
                 <img class="phone-app-image" src="phone-app-bottom.png" alt="image of app on phone">
             </div>
         </div>
